--- a/TheWitcher3.html
+++ b/TheWitcher3.html
@@ -4,20 +4,150 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Luis's Gaming Reviews | The Witcher 3</title>
-    <link rel="stylesheet" href="style.css">
+    <script src="https://cdn.tailwindcss.com"></script>
+    <link href="https://fonts.googleapis.com/css2?family=Cinzel:wght@400;500;600;700&family=Crimson+Text:ital,wght@0,400;0,600;1,400&display=swap" rel="stylesheet">
+    <script>
+        tailwind.config = {
+            theme: {
+                extend: {
+                    colors: {
+                        'witcher-dark': '#0f0f0f',
+                        'witcher-stone': '#1a1a1a',
+                        'witcher-green': '#2d4a22',
+                        'witcher-gold': '#d4af37',
+                        'witcher-brass': '#b8860b',
+                        'witcher-burgundy': '#722f37',
+                        'witcher-parchment': '#f4f1e8',
+                        'witcher-mist': '#8b9dc3'
+                    },
+                    fontFamily: {
+                        'medieval': ['Cinzel', 'serif'],
+                        'body': ['Crimson Text', 'serif']
+                    },
+                    backgroundImage: {
+                        'parchment': "url('data:image/svg+xml,<svg xmlns=\"http://www.w3.org/2000/svg\" viewBox=\"0 0 100 100\"><defs><filter id=\"paper\"><feTurbulence baseFrequency=\"0.04\" numOctaves=\"5\" result=\"noise\" seed=\"1\"/><feDiffuseLighting in=\"noise\" lighting-color=\"%23f4f1e8\" surfaceScale=\"1\"><feDistantLight azimuth=\"45\" elevation=\"60\"/></feDiffuseLighting></filter></defs><rect width=\"100\" height=\"100\" fill=\"%23f4f1e8\" filter=\"url(%23paper)\"/></svg>')"
+                    }
+                }
+            }
+        }
+    </script>
 </head>
-<body>
-    <h1>Luis's Gaming Hub</h1>
-    <h2>The Witcher 3: Wild Hunt - Review</h2>
-    <p>Welcome to my gaming review site, focusing on the best RPGs and shooters!</p>
-    <h3>Why The Witcher 3 Hits Different</h3>
-<p><strong>Exploration Freedom:</strong> The Witcher 3 gives you incredible freedom to travel, but every location has its own random encounters that actually enhance the experience.</p>
+<body class="bg-gradient-to-br from-witcher-dark via-witcher-stone to-witcher-green min-h-screen font-body text-witcher-parchment">
+    <!-- Background Pattern -->
+    <div class="fixed inset-0 opacity-5">
+        <div class="absolute inset-0 bg-gradient-to-br from-transparent via-witcher-gold/10 to-transparent"></div>
+        <div class="absolute inset-0" style="background-image: radial-gradient(circle at 1px 1px, rgba(212, 175, 55, 0.15) 1px, transparent 0); background-size: 20px 20px;"></div>
+    </div>
 
-<p><strong>Meaningful Combat:</strong> The world is filled with monsters of considerable challenge, but they don't feel random - they enhance the story and make every encounter matter.</p>
+    <!-- Main Container -->
+    <div class="relative z-10 container mx-auto px-4 py-8 max-w-4xl">
+        <!-- Header -->
+        <header class="text-center mb-12">
+            <div class="inline-block">
+                <h1 class="font-medieval text-5xl md:text-7xl font-bold text-witcher-gold mb-4 tracking-wide">
+                    <span class="block text-2xl md:text-3xl text-witcher-brass font-medium mb-2">Luis's</span>
+                    Gaming Hub
+                </h1>
+                <div class="h-1 bg-gradient-to-r from-transparent via-witcher-gold to-transparent rounded-full"></div>
+                <div class="h-px bg-gradient-to-r from-transparent via-witcher-brass to-transparent mt-2 rounded-full"></div>
+            </div>
+            <p class="text-witcher-mist mt-6 text-lg md:text-xl font-light italic max-w-2xl mx-auto">
+                Welcome to my gaming sanctum, where I chronicle the finest RPGs and adventures across mystical realms
+            </p>
+        </header>
 
-<p><strong>Respects the Source:</strong> Even with some discrepancies from the books, the game never distracts from Sapkowski's original masterpiece. As someone reading the books, I can appreciate how they complement each other.</p>
+        <!-- Main Review Card -->
+        <main class="bg-gradient-to-br from-witcher-stone/80 to-witcher-green/20 backdrop-blur-sm rounded-2xl shadow-2xl border border-witcher-gold/20 overflow-hidden">
+            <!-- Card Header -->
+            <div class="bg-gradient-to-r from-witcher-burgundy to-witcher-green p-6 md:p-8 border-b border-witcher-gold/30">
+                <h2 class="font-medieval text-3xl md:text-4xl font-semibold text-witcher-gold mb-2">
+                    The Witcher 3: Wild Hunt
+                </h2>
+                <div class="text-witcher-parchment/80 text-lg">A Journey Through the Northern Kingdoms</div>
+                <!-- Rating Badge -->
+                <div class="mt-4 inline-flex items-center gap-2 bg-witcher-gold/20 px-4 py-2 rounded-full border border-witcher-gold/40">
+                    <span class="text-witcher-gold text-sm font-medium">ESSENTIAL GAMING</span>
+                    <div class="flex gap-1">
+                        <div class="w-2 h-2 bg-witcher-gold rounded-full"></div>
+                        <div class="w-2 h-2 bg-witcher-gold rounded-full"></div>
+                        <div class="w-2 h-2 bg-witcher-gold rounded-full"></div>
+                        <div class="w-2 h-2 bg-witcher-gold rounded-full"></div>
+                        <div class="w-2 h-2 bg-witcher-gold rounded-full"></div>
+                    </div>
+                </div>
+            </div>
 
-<h3>My Rating</h3>
-<p>This is what RPGs should aspire to be. Essential gaming.</p>
+            <!-- Card Content -->
+            <div class="p-6 md:p-8 space-y-8">
+                <!-- Introduction -->
+                <div class="text-center">
+                    <h3 class="font-medieval text-2xl text-witcher-gold mb-4">Why The Witcher 3 Hits Different</h3>
+                    <div class="w-24 h-px bg-gradient-to-r from-transparent via-witcher-brass to-transparent mx-auto"></div>
+                </div>
+
+                <!-- Features Grid -->
+                <div class="grid md:grid-cols-1 gap-6">
+                    <!-- Exploration Freedom -->
+                    <div class="group bg-witcher-dark/40 p-6 rounded-xl border border-witcher-gold/10 hover:border-witcher-gold/30 transition-all duration-300 hover:bg-witcher-dark/60">
+                        <div class="flex items-start gap-4">
+                            <div class="flex-shrink-0 w-12 h-12 bg-gradient-to-br from-witcher-gold to-witcher-brass rounded-lg flex items-center justify-center">
+                                <svg class="w-6 h-6 text-witcher-dark" fill="currentColor" viewBox="0 0 20 20">
+                                    <path d="M3 4a1 1 0 011-1h12a1 1 0 011 1v2a1 1 0 01-1 1H4a1 1 0 01-1-1V4zM3 10a1 1 0 011-1h6a1 1 0 011 1v6a1 1 0 01-1 1H4a1 1 0 01-1-1v-6zM14 9a1 1 0 00-1 1v6a1 1 0 001 1h2a1 1 0 001-1v-6a1 1 0 00-1-1h-2z"/>
+                                </svg>
+                            </div>
+                            <div class="flex-1">
+                                <h4 class="font-medieval text-xl text-witcher-gold mb-2 group-hover:text-witcher-brass transition-colors">Exploration Freedom</h4>
+                                <p class="text-witcher-parchment/90 leading-relaxed">The Witcher 3 gives you incredible freedom to travel, but every location has its own random encounters that actually enhance the experience.</p>
+                            </div>
+                        </div>
+                    </div>
+
+                    <!-- Meaningful Combat -->
+                    <div class="group bg-witcher-dark/40 p-6 rounded-xl border border-witcher-gold/10 hover:border-witcher-gold/30 transition-all duration-300 hover:bg-witcher-dark/60">
+                        <div class="flex items-start gap-4">
+                            <div class="flex-shrink-0 w-12 h-12 bg-gradient-to-br from-witcher-burgundy to-witcher-green rounded-lg flex items-center justify-center">
+                                <svg class="w-6 h-6 text-witcher-parchment" fill="currentColor" viewBox="0 0 20 20">
+                                    <path fill-rule="evenodd" d="M10 2L3 7v3c0 5.55 3.84 10.74 9 12 5.16-1.26 9-6.45 9-12V7l-7-5z" clip-rule="evenodd"/>
+                                </svg>
+                            </div>
+                            <div class="flex-1">
+                                <h4 class="font-medieval text-xl text-witcher-gold mb-2 group-hover:text-witcher-brass transition-colors">Meaningful Combat</h4>
+                                <p class="text-witcher-parchment/90 leading-relaxed">The world is filled with monsters of considerable challenge, but they don't feel random - they enhance the story and make every encounter matter.</p>
+                            </div>
+                        </div>
+                    </div>
+
+                    <!-- Respects the Source -->
+                    <div class="group bg-witcher-dark/40 p-6 rounded-xl border border-witcher-gold/10 hover:border-witcher-gold/30 transition-all duration-300 hover:bg-witcher-dark/60">
+                        <div class="flex items-start gap-4">
+                            <div class="flex-shrink-0 w-12 h-12 bg-gradient-to-br from-witcher-mist to-witcher-gold rounded-lg flex items-center justify-center">
+                                <svg class="w-6 h-6 text-witcher-dark" fill="currentColor" viewBox="0 0 20 20">
+                                    <path d="M9 12l2 2 4-4m6 2a9 9 0 11-18 0 9 9 0 0118 0z"/>
+                                </svg>
+                            </div>
+                            <div class="flex-1">
+                                <h4 class="font-medieval text-xl text-witcher-gold mb-2 group-hover:text-witcher-brass transition-colors">Respects the Source</h4>
+                                <p class="text-witcher-parchment/90 leading-relaxed">Even with some discrepancies from the books, the game never distracts from Sapkowski's original masterpiece. As someone reading the books, I can appreciate how they complement each other.</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Final Verdict -->
+                <div class="bg-gradient-to-r from-witcher-burgundy/20 to-witcher-green/20 p-6 rounded-xl border-l-4 border-witcher-gold">
+                    <h3 class="font-medieval text-2xl text-witcher-gold mb-3">The Verdict</h3>
+                    <p class="text-witcher-parchment text-lg leading-relaxed italic">
+                        "This is what RPGs should aspire to be. Essential gaming."
+                    </p>
+                </div>
+            </div>
+        </main>
+
+        <!-- Footer -->
+        <footer class="text-center mt-12 text-witcher-mist/60">
+            <div class="w-32 h-px bg-gradient-to-r from-transparent via-witcher-brass to-transparent mx-auto mb-4"></div>
+            <p class="text-sm">A realm of gaming wisdom and adventure</p>
+        </footer>
+    </div>
 </body>
 </html>
